# meson-cargo

./: AUTHORS  NEWS.md  README.md  meson.build  meson_options.txt
.github/workflows/: tests.yml
src/: build.sh  dist.sh  vendor.sh
test/basic/: Cargo.toml  lib.rs  meson.build  test-basic.c  testlib.c  testlib.h
test/bin-only/: Cargo.toml  meson.build  rbin.rs  test.sh
test/lib-only/: Cargo.toml  clib.c  clib.h  meson.build  rlib.rs  test.c
test/lib-only/subprojects/: meson-cargo-1.wrap
